--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -110,12 +110,17 @@
     - name: 为数组属性创作策略
       displayName: 'array property, alias, aliases, in, notIn, type, defaultValue'
       href: ./how-to/author-policies-for-arrays.md
-    - name: 在 Windows 上创建 Guest Configuration 策略
-      displayName: 'powershell, dsc, chef, windows'
-      href: ./how-to/guest-configuration-create.md
-    - name: 在 Linux 上创建 Guest Configuration 策略
-      displayName: 'powershell, dsc, chef, linux'
-      href: ./how-to/guest-configuration-create-linux.md
+    - name: 来宾配置
+      items:
+        - name: 在 Windows 上创建 Guest Configuration 策略
+          displayName: 'powershell, dsc, chef, windows'
+          href: ./how-to/guest-configuration-create.md
+        - name: 在 Linux 上创建 Guest Configuration 策略
+          displayName: 'powershell, dsc, chef, linux'
+          href: ./how-to/guest-configuration-create-linux.md
+        - name: 根据组策略创建 Guest Configuration 策略
+          displayName: 'powershell, dsc, grouppolicy, windows'
+          href: ./how-to/guest-configuration-create-group-policy.md
     - name: 获取符合性数据
       displayName: 'evaluation, scan, summarize, query, events, log analytics'
       href: ./how-to/get-compliance-data.md
@@ -155,9 +160,9 @@
     - name: Azure PowerShell
       items:
         - name: 策略
-          href: '/powershell/module/az.resources/#policies'
+          href: /powershell/module/az.resources/#policies
         - name: 策略见解
-          href: '/powershell/module/az.policyinsights#policy_insights'
+          href: /powershell/module/az.policyinsights#policy_insights
         - name: 来宾配置
           href: 'https://www.powershellgallery.com/packages/Az.GuestConfiguration'
     - name: 用于 .NET 的 Azure SDK
