--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -37,7 +37,7 @@
       items:
         - name: 使用 Azure NetApp 文件的解决方案体系结构
           href: azure-netapp-files-solution-architectures.md
-        - name: 特定解决方案
+        - name: 使用 Azure NetApp 文件的好处
           items:
             - name: 将 Azure NetApp 文件与 Oracle Database 配合使用的好处
               href: solutions-benefits-azure-netapp-files-oracle-database.md
