--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -13,12 +13,15 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: '创建持久函数 - C#'
+    - name: 创建持久函数 - C#
       href: durable-functions-create-first-csharp.md
       displayName: 'get started, chaining'
     - name: 创建持久函数 - JavaScript
       displayName: 'get started, chaining'
       href: quickstart-js-vscode.md
+    - name: 创建持久函数 - Python
+      displayName: 'get started, chaining'
+      href: quickstart-python-vscode.md
 - name: 教程
   items:
     - name: 函数链
@@ -76,7 +79,7 @@
 - name: 参考
   items:
     - name: Host.json 设置
-      href: 'durable-functions-bindings.md#host-json'
+      href: durable-functions-bindings.md#host-json
     - name: 绑定
       href: durable-functions-bindings.md
     - name: HTTP API
