--- a/articles/azure-resource-manager/templates/index.yml
+++ b/articles/azure-resource-manager/templates/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: mumian
   ms.author: jgao
   ms.date: 03/09/2020
-  ms.openlocfilehash: f05b14039f5b83b4f214d7fa479a3ab809e859c6
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: d6c1708543623423c939d03f0510e1abc72cf637
+  ms.sourcegitcommit: 6fd28c1e5cf6872fb28691c7dd307a5e4bc71228
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "78943236"
+  ms.lasthandoff: 06/23/2020
+  ms.locfileid: "85209192"
 landingContent:
 - title: 关于 ARM 模板
   linkLists:
@@ -35,7 +35,7 @@ landingContent:
       url: linked-templates.md
   - linkListType: video
     links:
-    - text: 新增功能？
+    - text: 新增功能
       url: https://youtu.be/3D-JIKShrws
 - title: 入门
   linkLists:
