--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 04/14/2020
-  ms.openlocfilehash: e62db32a20c4124f64e7c77d626099905a960815
-  ms.sourcegitcommit: 64fc70f6c145e14d605db0c2a0f407b72401f5eb
+  ms.openlocfilehash: 3d06144a9b0a39e7fe0dfbaf7fbdd789ef439336
+  ms.sourcegitcommit: 4042aa8c67afd72823fc412f19c356f2ba0ab554
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "83871805"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85297828"
 landingContent:
 - title: 关于 Azure Lighthouse
   linkLists:
@@ -71,15 +71,17 @@ landingContent:
       url: ./how-to/view-manage-customers.md
     - text: 查看和管理服务提供商
       url: ./how-to/view-manage-service-providers.md
-- title: 使用 Azure 服务
+- title: 大规模使用 Azure 服务
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 大规模使用 Azure Monitor 日志
+    - text: 管理 Azure Sentinel 工作区
+      url: ./how-to/manage-sentinel-workspaces.md
+    - text: 使用 Azure Monitor 日志
       url: ./how-to/monitor-at-scale.md
     - text: 监视委托更改
       url: ./how-to/monitor-at-scale.md
-    - text: 大规模部署 Azure Policy
+    - text: 部署 Azure Policy
       url: ./how-to/policy-at-scale.md
     - text: 部署可修正的策略
       url: ./how-to/deploy-policy-remediation.md
