--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -59,6 +59,8 @@
           href: automation-config-aws-account.md
         - name: 配置使用 Azure AD 进行的身份验证
           href: automation-use-azure-ad.md
+        - name: 管理自动化服务使用的 DNS 记录
+          href: how-to/automation-region-dns-records.md
         - name: 管理自动化运行方式帐户
           href: manage-runas-account.md
         - name: 管理角色权限和安全性
@@ -282,7 +284,7 @@
         - name: 与事件网格和 Microsoft Teams 集成
           href: ../event-grid/ensure-tags-exists-on-new-virtual-machines.md
         - name: 自动启动/停止 Azure-SSIS IR
-          href: '../data-factory/how-to-schedule-azure-ssis-integration-runtime.md#create-and-schedule-azure-automation-runbook-that-startsstops-azure-ssis-ir'
+          href: ../data-factory/how-to-schedule-azure-ssis-integration-runtime.md#create-and-schedule-azure-automation-runbook-that-startsstops-azure-ssis-ir
 - name: 参考
   items:
     - name: Azure PowerShell Az
