--- a/articles/open-datasets/toc.yml
+++ b/articles/open-datasets/toc.yml
@@ -39,7 +39,7 @@
       href: 'https://azure.microsoft.com/pricing/details/open-datasets/'
     - name: 区域可用性
       href: 'https://azure.microsoft.com/en-us/global-infrastructure/services/?products=open-datasets&regions=non-regional'
-    - name: 用户论坛
-      href: 'https://aka.ms/open-datasets-forum'
+    - name: Microsoft 问答
+      href: 'https://docs.microsoft.com/answers/topics/azure-open-datasets.html'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-open-datasets'
