--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -420,5 +420,7 @@
           href: sql-data-warehouse-partner-data-integration.md
         - name: 数据管理
           href: sql-data-warehouse-partner-data-management.md
+        - name: 机器学习和 AI
+          href: sql-data-warehouse-partner-machine-learning-ai.md
         - name: 公共预览版合作伙伴
           href: sql-data-warehouse-partner-launch.md
