--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -244,7 +244,7 @@
           href: schema-stateset-stylesobject.md
         - name: 车辆消耗模型
           href: consumption-model.md
-        - name: 扩展 GeoJSON 格式
+        - name: 扩展的 GeoJSON 格式
           href: extend-geojson.md
         - name: 地理围栏 GEOJSON 格式
           href: geofence-geojson.md
