--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -177,7 +177,7 @@
           href: /java/api/com.microsoft.azure.management.resources.policyassignment?view=azure-java-stable
         - name: 策略定义
           href: /java/api/com.microsoft.azure.management.resources.PolicyDefinitions?view=azure-java-stable
-    - name: 用于 Node 的 Azure SDK
+    - name: 用于 JavaScript 的 Azure SDK
       items:
         - name: 策略
           href: /javascript/api/@azure/arm-policy
