--- a/articles/analysis-services/TOC.yml
+++ b/articles/analysis-services/TOC.yml
@@ -30,9 +30,9 @@
     - name: 使用服务主体进行自动化
       href: analysis-services-service-principal.md
     - name: 客户端库
-      href: analysis-services-data-providers.md
+      href: 'https://docs.microsoft.com/analysis-services/client-libraries?view=azure-analysis-services-current'
     - name: 兼容性级别
-      href: 'https://docs.microsoft.com/analysis-services/tabular-models/compatibility-level-for-tabular-models-in-analysis-services'
+      href: 'https://docs.microsoft.com/analysis-services/tabular-models/compatibility-level-for-tabular-models-in-analysis-services?view=azure-analysis-services-current'
     - name: 连接到本地数据源
       href: analysis-services-gateway.md
     - name: 连接到服务器
