--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -615,6 +615,8 @@
               href: app/remove-application-insights.md
         - name: 无代码监视
           items:
+            - name: 概述
+              href: app/codeless-overview.md
             - name: Azure VM 和规模集
               href: app/azure-vm-vmss-apps.md
             - name: Azure 应用服务
