commit translated contents

--- a/articles/azure-sql/index.yml
+++ b/articles/azure-sql/index.yml
@@ -14,14 +14,14 @@ metadata:
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 10/30/2019
-  ms.openlocfilehash: 449fa109712c3a92a48cc1e1997da3d2703bb1b2
-  ms.sourcegitcommit: 053e5e7103ab666454faf26ed51b0dfcd7661996
+  ms.openlocfilehash: b069cd8a027d5652ae68bbbbf21e03434daf1443
+  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84023681"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85318567"
 landingContent:
-- title: Azure SQL 数据库
+- title: Azure SQL Database
   linkLists:
   - linkListType: overview
     links:
@@ -114,7 +114,7 @@ landingContent:
     - text: SQL Server Management Studio (SSMS)
       url: database/connect-query-ssms.md
     - text: Azure Data Studio
-      url: /azure-data-studio/quickstart-sql-database?toc=%2Fazure%2Fsql-database%2Ftoc.json
+      url: /sql/azure-data-studio/quickstart-sql-database?toc=%2Fazure%2Fazure-sql%2Ftoc.json
     - text: Azure 门户
       url: database/connect-query-portal.md
     - text: Visual Studio (.NET)
