commit translated contents

--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -141,7 +141,9 @@
 - name: 资源
   items:
     - name: PowerShell
-      href: '/powershell/module/az.desktopvirtualization/?view=azps-4.2.0#desktopvirtualization'
+      href: /powershell/module/az.desktopvirtualization/?view=azps-4.2.0#desktopvirtualization
+    - name: REST API 参考
+      href: /rest/api/desktopvirtualization/
     - name: 体验评估器
       href: 'https://azure.microsoft.com/services/virtual-desktop/assessment/'
     - name: 定价计算器
