--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -92,6 +92,9 @@
           href: custom-roles-cli.md
         - name: REST API
           href: custom-roles-rest.md
+        - name: ARM 模板
+          displayName: Resource Manager
+          href: custom-roles-template.md
     - name: 查看活动日志
       href: change-history-report.md
     - name: 提升访问权限
@@ -107,7 +110,7 @@
     - name: 资源提供程序操作
       href: resource-provider-operations.md
     - name: Azure RBAC 限制
-      href: '../azure-resource-manager/management/azure-subscription-service-limits.md#role-based-access-control-limits'
+      href: ../azure-resource-manager/management/azure-subscription-service-limits.md#role-based-access-control-limits
     - name: Azure PowerShell
       href: /powershell/module/az.resources
     - name: Azure CLI
