--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 05/20/2020
-  ms.openlocfilehash: 4d7c02891330699978134dbb4d53faef0f16b1e9
-  ms.sourcegitcommit: 0fa52a34a6274dc872832560cd690be58ae3d0ca
+  ms.date: 06/16/2020
+  ms.openlocfilehash: d3a25af9f7d8e16fbb008fd84aff6e29c57680da
+  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/29/2020
-  ms.locfileid: "84204814"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85321961"
 landingContent:
 - title: 关于 Azure Policy
   linkLists:
@@ -129,9 +129,9 @@ landingContent:
       url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
     - text: 用于 .NET 的 Azure SDK（策略定义）
       url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
-    - text: 用于 Node 的 Azure SDK（策略）
+    - text: 用于 JavaScript 的 Azure SDK（策略）
       url: /javascript/api/@azure/arm-policy
-    - text: 用于 Node 的 Azure SDK（策略见解）
+    - text: 用于 JavaScript 的 Azure SDK（策略见解）
       url: /javascript/api/@azure/arm-policyinsights
     - text: 用于 Python 的 Azure SDK（策略）
       url: /python/api/azure-mgmt-resource/azure.mgmt.resource.policy
