--- a/articles/governance/resource-graph/index.yml
+++ b/articles/governance/resource-graph/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/16/2020
-  ms.openlocfilehash: 8f4bce7f5230af69a4a1efc3382c3ca6d4a24f59
-  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
+  ms.openlocfilehash: e61131dbcfb9865ff5c91f13e4d3f587b465d851
+  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/17/2020
-  ms.locfileid: "84888138"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85321893"
 landingContent:
 - title: 关于 Azure Resource Graph
   linkLists:
@@ -35,7 +35,7 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: 第一个查询（门户）
+    - text: 第一个查询（Azure 门户）
       url: ./first-query-portal.md
     - text: 第一个查询 (Azure CLI)
       url: ./first-query-azurecli.md
@@ -43,6 +43,8 @@ landingContent:
       url: ./first-query-powershell.md
     - text: 第一个查询 (Go)
       url: ./first-query-go.md
+    - text: 第一个查询 (JavaScript)
+      url: ./first-query-javascript.md
     - text: 第一个查询 (Python)
       url: ./first-query-python.md
     - text: 共享查询（门户）
@@ -81,29 +83,29 @@ landingContent:
     links:
     - text: OpenAPI - 2019-04-01
       url: https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2019-04-01
-    - text: 用于 .NET 的 SDK - NuGet
+    - text: 用于 .NET 的 Azure SDK - NuGet
       url: https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/
-    - text: 用于 Java 的 SDK - Maven
+    - text: 用于 Java 的 Azure SDK - Maven
       url: https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar
-    - text: 用于 Ruby 的 SDK - Gem
+    - text: 用于 Ruby 的 Azure SDK - Gem
       url: https://rubygems.org/gems/azure_mgmt_resourcegraph
 - title: 参考 - SDK
   linkLists:
   - linkListType: reference
     links:
-    - text: Azure PowerShell
-      url: /powershell/module/az.resourcegraph/
     - text: Azure CLI
       url: /cli/azure/ext/resource-graph/graph
-    - text: .NET
+    - text: Azure PowerShell
+      url: /powershell/module/az.resourcegraph/
+    - text: 用于 .NET 的 Azure SDK
       url: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
-    - text: Go
+    - text: Azure SDK for Go
       url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph
-    - text: Java
+    - text: 用于 Java 的 Azure SDK
       url: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
-    - text: 节点
+    - text: 用于 JavaScript 的 Azure SDK
       url: /javascript/api/@azure/arm-resourcegraph
-    - text: Python
+    - text: 用于 Python 的 Azure SDK
       url: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
     - text: REST
       url: /rest/api/azure-resourcegraph/
