--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 17798401c9781ab567f50ef141f96cc885083b01
-  ms.sourcegitcommit: 9bfd94307c21d5a0c08fe675b566b1f67d0c642d
+  ms.openlocfilehash: 7e444b27d701b3b7ff143a404c4210f9123767b4
+  ms.sourcegitcommit: f98ab5af0fa17a9bba575286c588af36ff075615
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/17/2020
-  ms.locfileid: "84974953"
+  ms.lasthandoff: 06/25/2020
+  ms.locfileid: "85362520"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -1141,7 +1141,7 @@ productDirectory:
     - networking
     url: virtual-network/index.yml
   - title: 虚拟 WAN
-    summary: 通过 Azure 自动执行并优化分支到分支的连接
+    summary: 用于连接和安全的 Microsoft 托管的中心和分支服务
     imageSrc: https://static.docs.com/ui/media/product/azure/virtual-wans.svg
     azureCategories:
     - networking
@@ -1215,7 +1215,7 @@ productDirectory:
     url: virtual-machines/windows/managed-disks-overview.md
   - title: Azure 文件
     summary: 使用标准 SMB 3.0 协议的文件共享
-    imageSrc: https://static.docs.com/ui/media/product/azure/storage-accounts.svg
+    imageSrc: https://static.docs.com/ui/media/product/azure/storage-azure-files.svg
     azureCategories:
     - storage
     url: storage/files/index.yml
