--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -132,6 +132,8 @@
           href: upgrade-cluster.md
         - name: 使用运行时间 SLA
           href: uptime-sla.md
+        - name: 使用邻近放置组（预览版）
+          href: reduce-latency-ppg.md
         - name: 升级节点映像（预览版）
           href: node-image-upgrade.md
         - name: 处理节点 OS 更新
