--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -21,6 +21,8 @@
       href: front-door-tutorial-geo-filtering.md
     - name: 设置规则引擎
       href: front-door-tutorial-rules-engine.md
+    - name: 使用规则引擎添加安全性标头
+      href: front-door-security-headers.md
     - name: Web 应用程序防火墙和 Front Door
       href: front-door-waf.md
 - name: 示例
