--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -4,7 +4,7 @@
   items:
     - name: 什么是 Azure Resource Graph？
       displayName: 'Resource Manager, query language, rbac, permissions'
-      href: overview.md
+      href: ./overview.md
 - name: 快速入门
   expanded: true
   items:
@@ -20,6 +20,9 @@
     - name: 运行自己的第一个查询 - Go
       displayName: 'package, sdk, golang'
       href: ./first-query-go.md
+    - name: 运行第一个查询 - JavaScript
+      displayName: 'library, node, arm-resourcegraph'
+      href: ./first-query-javascript.md
     - name: 运行自己的第一个查询 - Python
       displayName: 'library, azure-mgmt, cli'
       href: ./first-query-python.md
@@ -77,7 +80,7 @@
       href: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
     - name: 用于 Java 的 Azure SDK (Maven)
       href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
-    - name: 用于 Node 的 Azure SDK
+    - name: 用于 JavaScript 的 Azure SDK
       href: /javascript/api/@azure/arm-resourcegraph
     - name: 用于 Python 的 Azure SDK
       href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
