--- a/articles/security-center/index.yml
+++ b/articles/security-center/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: memildin
   ms.author: memildin
   ms.date: 11/04/2019
-  ms.openlocfilehash: f564113f9a2bb92d1591ac0d3512ae460aa8f58d
-  ms.sourcegitcommit: 52d2f06ecec82977a1463d54a9000a68ff26b572
+  ms.openlocfilehash: 13a7ca317630a5a1b0606fa0d2e2022f065fbd4d
+  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/15/2020
-  ms.locfileid: "84783191"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85317184"
 landingContent:
 - title: 关于安全中心
   linkLists:
@@ -30,18 +30,16 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
-    - text: 保护容器
-      url: container-security.md
-    - text: VM 的集成漏洞评估
-      url: built-in-vulnerability-assessment.md
-    - text: 查看安全警报的架构
-      url: alerts-schemas.md
-    - text: 自动响应警报和建议
-      url: workflow-automation.md
-    - text: 导出安全警报和建议
-      url: continuous-export.md
-    - text: 为 Azure Key Vault 设置威胁防护
-      url: advanced-threat-protection-key-vault.md
+    - text: 安全中心的发行说明
+      url: release-notes.md
+    - text: SQL 计算机的高级数据安全
+      url: security-center-iaas-advanced-data.md
+    - text: 警报抑制规则
+      url: alerts-suppression-rules.md
+    - text: 新安全控制的完整说明
+      url: secure-score-security-controls.md#security-controls-and-their-recommendations
+    - text: 新安全分数 API
+      url: secure-score-security-controls.md#getting-your-secure-score-from-the-rest-api
 - title: 入门
   linkLists:
   - linkListType: get-started
@@ -64,6 +62,8 @@ landingContent:
       url: tutorial-security-policy.md
     - text: 使用建议增强安全性
       url: security-center-using-recommendations.md
+    - text: 使用安全分数 API 进行跟踪
+      url: secure-score-security-controls.md#getting-your-secure-score-from-the-rest-api
 - title: 缓解威胁
   linkLists:
   - linkListType: how-to-guide
